--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -7,7 +7,7 @@
         <mat-form-field>
           <input
             matInput
-            [(ngModel)]="userData.Username"
+            [(ngModel)]="loginInfo.Username"
             placeholder="Username"
             type="text"
             name="Username"
@@ -17,7 +17,7 @@
           <mat-form-field>
           <input
             matInput
-            [(ngModel)]="userData.Password"
+            [(ngModel)]="loginInfo.Password"
             type = "password"
             placeholder="Password"
             name="Password"
