--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,16 @@
   <button
     mat-raised-button
     color="primary"
+    (click)="openUserLoginDialog()"
   >
     Login
+  </button>
+
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="openMoviesDialog()"
+  >
+    All Movies
   </button>
 </div>
