--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -8,7 +8,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.username"
+          [(ngModel)]="userData.Username"
           placeholder="Username"
           type="text"
           name="Username"
@@ -18,7 +18,7 @@
         <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.password"
+          [(ngModel)]="userData.Password"
           type = "password"
           placeholder="Password"
           name="Password"
@@ -28,7 +28,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.email"
+          [(ngModel)]="userData.Email"
           type = "email"
           placeholder="Email"
           name="Email"
@@ -38,7 +38,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.birthdate"
+          [(ngModel)]="userData.Birthdate"
           type = "date"
           placeholder="Birthday"  
           name="Birthdate"
