--- a/src/app/director/director.component.html
+++ b/src/app/director/director.component.html
@@ -2,9 +2,9 @@
     <mat-card-title class="director-dialog-title">{{ data.Name }}</mat-card-title>
     <br />
     <mat-dialog-content class="director-dialog-content">
-        <b>Birthday: </b>{{ data.Birthday}}
+        <b>Birthday: </b>{{ data.Birthdate}}
         <br>
-        <b>Bio: </b>{{ data.Bio }}
+        <b>Bio: </b>{{ data.Biography }}
     </mat-dialog-content>
     <mat-card-actions class="director-actions">
         <button class="director-close-button" mat-stroked-button aria-label="Close the director details button"
