--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 <div class="user-profile-page">
   <!-- User Profile -->
   <mat-card class="user-profile-card">
@@ -8,9 +7,9 @@
 
     <!-- View Profile Information -->
     <mat-card-content class="user-profile-card-content">
-      <p><b>Username:</b> {{user.Username}}</p>
-      <p><b>Email:</b> {{user.Email}}</p>
-      <p><b>Birthday:</b> {{user.Birthday | date }}</p>
+      <p><b>Username:</b> {{users.Username}}</p>
+      <p><b>Email:</b> {{users.Email}}</p>
+      <p><b>Birthday:</b> {{users.Birthday | date }}</p>
     </mat-card-content>
 
     <!-- Edit Profile Information & Delete Profile -->
