movie-card updates

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -56,7 +56,7 @@
   
     <button
       mat-button
-      (click)="addToFavoriteMovies(movie.MovieID)"
+      (click)="addToFavoriteMovies(movie._id)"
       color="primary"
     >
       Add to Favorites
